# docs

./: .gitignore  404.html  CHALLENGE_TEMPLATE.md  DOCS_PORTAL.md  ENGINEERING_METRICS.md  INTERVIEW_PLAYBOOK.md  LEARNING_PATH.md  Makefile  README.md  REFERENCES.md  REPO_INDEX.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: clear_solutions.yml  deploy.yml  update_dashboard.yml
Problems/: distributed_job_scheduling_system.py
adapter/: format_translator.py
company_guides/amazon/: L5_guide.md  L6_guide.md
company_guides/google/: L4_guide.md  L5_guide.md  L6_guide_manager.md  L6_guide_staff.md
company_guides/meta/: e4_guide.md  e5_guide.md  e6_guide.md  m1_guide.md
company_guides/microsoft/: l63-l64_guide.md
decorator/: build_your_own_pizza.py
design_patterns/: INSIGHTS.md  PATTERN_TEMPLATE.md  ROADMAP.md
design_patterns/INSIGHTS/: index.html
design_patterns/PATTERN_TEMPLATE/: index.html
design_patterns/ROADMAP/: index.html
docs/: company_guides  design_patterns  docs_portal.md  dsa  engineering_metrics.md  index.md  infrastructure_challenges  interview_playbook.md  machine_coding  repo_index.md  system_design_hld
docs/dashboard/: engineering_metrics.md
docs/javascripts/: mermaid.mjs
docs_portal/: index.html
dsa/: DSA_TEMPLATE.md  INSIGHTS.md  ROADMAP.md
dsa/01_arrays_strings/: TOPIC_OVERVIEW.md
engineering_metrics/: index.html
factory/: coupon.py
infrastructure_challenges/: INFRA_TEMPLATE.md  INSIGHTS.md  ROADMAP.md
instagram/: fc.py
interpreter/: rule_engine.py
interview_playbook/: index.html
iterator/: dinnerAndPancakeHouseMerge.py
js/: mermaid-init.js
machine_coding/: INSIGHTS.md  MACHINE_CODING_TEMPLATE.md  ROADMAP.md
null_object/: discount_engine.py
object_pool/: db_proxy.py
observer/: smart_home_system.py
repo_index/: index.html
scripts/: analytics.py  clear_solutions.py  git_utils.py  github_utils.py  parser.py  scheduler.py  update_dashboard.py
search/: search_index.json
snake_ladder/: main.py
state_pattern/: document_editor.py
system_design_hld/: HLD_TEMPLATE.md  INSIGHTS.md  ROADMAP.md
todo/: index.html
(+681 files in other folders)
